--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   align-items: center;
 }
 
+body {
+  background-color: rgb(252, 218, 248);
+  color: rgb(43, 13, 33);
+}
 .game {
   display: flex;
   gap: 25px;
@@ -21,13 +25,16 @@
   border-color: rgb(64, 32, 32);
   border-style: solid;
   border-width: 3px;
+  box-shadow: 1px 1px 4px 1px rgb(2,150,200);
   font-size: 2em;
+  font-weight: bold;
 }
 
 .card {
   height: 200px;
   width: 120px;
   background-color: rgb(192, 168, 168);
+  color: rgb(64, 32, 32);
   border-radius: 8px;
   border: 4px solid rgb(64,32,32);
   box-shadow: 1px 1px 4px 1px rgb(2,150,200);
@@ -51,6 +58,8 @@
 
 .hand-list {
   display: flex;
+  margin: 0px;
+  padding: 0px;
 }
 
 .hand-list.player {
